# bip-380

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  run_fuzzing.sh
fuzz/: Cargo.toml
fuzz/dict/: dict_derive_key.dict  dict_key_expression.dict  dict_script_expression.dict
fuzz/fuzz_targets/: derive_key_fuzz.rs  key_expression_fuzz.rs  script_expression_fuzz.rs
src/: arg_parser.rs  lib.rs  main.rs  test_utils.rs
src/parsers/: arg_parser.rs  flag_parser.rs  mod.rs
src/structs/: derive_key_config.rs  derive_key_input.rs  key_expression_config.rs  key_expression_input.rs  mod.rs  parsing_error.rs  script_expression_config.rs  script_expression_input.rs
src/subcommands/: derive_key.rs  key_expression.rs  mod.rs  script_expression.rs
src/subcommands/utils/: checksum.rs  extended_key.rs  hex_encoded_public_key.rs  hexadecimal.rs  key_origin.rs  mod.rs  wallet_import_format.rs
src/traits/: mod.rs  parsable.rs  string_utils.rs
src/utils/: error_messages.rs  info_messages.rs  mod.rs
