[package]
name = "bip380-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bip380 = { path = ".." }

[[bin]]
name = "derive_key_fuzz"
path = "fuzz_targets/derive_key_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "key_expression_fuzz"
path = "fuzz_targets/key_expression_fuzz.rs"
test = false
doc = false
bench = false

[[bin]]
name = "script_expression_fuzz"
path = "fuzz_targets/script_expression_fuzz.rs"
test = false
doc = false
bench = false
